--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -180,7 +180,7 @@
             </div>
             <div class="card-face back mur8" data-value="none">
                 <div class="card-content">
-                    <i>thanks 4 all</i>
+                    <i>thanks 4 visiting</i>
                     <img src="media/mur08.png" alt="">
 
                 </div>
