--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -213,7 +213,8 @@
         </header>
         <p>Here we go again. I'm looking for my next room in Amsterdam. It can be in Noord, Oost, Zuid or West,
             just
-            need to move in +/- April 25. Play around to see what I like, but also reach me if you or some
+            need to move in +/- April 2025. Play around to see what I like, but also share, subscribe, and contact me if
+            you or some
             friend can help me for this!!
         <p>Yours 🫂🎐,</p>
         <p>pablo</p>
