--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -211,7 +211,8 @@
                 <a href="https://wa.me/34679797573?text=paaaaablo!">whatsapp</a>
             </div>
         </header>
-        <p>Here we go again. I'm looking for my next room in Amsterdam. It can be in Noord, Oost, Zuid or West,
+        <p>Here we go again. I'm looking for my next room in Amsterdam vice city. It can be in Noord, Oost, Zuid or
+            West,
             just
             need to move in +/- April 2025. Play around to see what I like, but also share, subscribe, and contact me if
             you or some
