--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pablo likes...</title>
+    <title>pablo 🏠👯💌... </title>
 
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -211,12 +211,25 @@
                 <a href="https://wa.me/34679797573?text=paaaaablo!">whatsapp</a>
             </div>
         </header>
-        <p>Here we go again. I'm looking for my next room in Amsterdam vice city. It can be in Noord, Oost, Zuid or
+        <p>Here we go again.<br><br>I'm looking for my next room in Amsterdam vice city. It can be in Noord, Oost, Zuid
+            or
             West,
             just
-            need to move in +/- April 2025. Play around to see what I like, but also share, subscribe, and contact me if
+            need to move in +/- April 25. I work as a designer at <a href="https://analogueagency.com/">Analogue</a> and
+            like to spend my time with
+            people, repairing things or at the movies. I have lived in Bilbao 🇪🇸, Bayonne, Paris, Le Havre and Amiens
+            🇫🇷 before arriving here 🇳🇱 6 months ago. I'm pretty easy in almost everything, just "be
+            excellent to each
+            other" as the streets says <a href="beteo.png"
+               style="text-decoration: none;">
+                <span
+                      style="line-height: 150%; background-image:
+                      url('beteo.png');
+                      display: inline-block;width: 30px; height: 30px; background-size: cover;border-radius: 4px; ">
+                </span></a>. <br><br>Play around to see more things I like, but also share, <a
+               href="https://www.youtube.com/watch?v=qUKxkIZCRuI&t=129s">subscribe</a>, and contact me if
             you or some
-            friend can help me for this!!
+            friend can help me to find my new home!!
         <p>Yours 🫂🎐,</p>
         <p>pablo</p>
         </p>
