--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -211,28 +211,37 @@
                 <a href="https://wa.me/34679797573?text=paaaaablo!">whatsapp</a>
             </div>
         </header>
-        <p>Here we go again.<br><br>I'm looking for my next room in Amsterdam vice city. It can be in Noord, Oost, Zuid
+        <p>
+            Here we go again <a href="pablo-home.png"
+               style="text-decoration: none;">
+                <span
+                      style="line-height: 150%; background-image:
+             url('pablo-home.png');
+             display: inline-block;width: 30px; height: 30px; background-size: cover;border-radius: 4px; ">
+                </span></a>.</p>
+        <p>I'm looking for a new room in Amsterdam vice city. It can be in Noord, Oost, Zuid
             or
             West,
             just
             need to move in +/- April 25. I work as a designer at <a href="https://analogueagency.com/">Analogue</a> and
             like to spend my time with
-            people, repairing things or at the movies. I have lived in Bilbao 🇪🇸, Bayonne, Paris, Le Havre and Amiens
-            🇫🇷 before arriving here 🇳🇱 6 months ago. I'm pretty easy in almost everything, just "be
+            people, repairing things or at the movies. I have lived in Bilbao 🇪🇸, Bayonne, Paris, Le Havre, Amiens
+            🇫🇷, before moving here 6 months ago. I'm pretty easy in almost everything, just "be
             excellent to each
-            other" as the streets says <a href="beteo.png"
+            other" as Sarphatipark street says <a href="beteo.png"
                style="text-decoration: none;">
                 <span
                       style="line-height: 150%; background-image:
                       url('beteo.png');
                       display: inline-block;width: 30px; height: 30px; background-size: cover;border-radius: 4px; ">
-                </span></a>. <br><br>Play around to see more things I like, but also share, <a
+                </span></a>.
+        </p>
+        <p>Play around to see more things I like, but also share ‼️, <a
                href="https://www.youtube.com/watch?v=qUKxkIZCRuI&t=129s">subscribe</a>, and contact me if
             you or some
-            friend can help me to find my new home!!
+            friend can help me to find my new home!!</p>
         <p>Yours 🫂🎐,</p>
         <p>pablo</p>
-        </p>
 
     </div>
 
