--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -223,7 +223,7 @@
             or
             West,
             just
-            need to move in +/- April 25. I work as a designer at <a href="https://analogueagency.com/">Analogue</a> and
+            need to move around April 25. I work as a designer at <a href="https://analogueagency.com/">Analogue</a> and
             like to spend my time with
             people, repairing things or at the movies. I have lived in Bilbao 🇪🇸, Bayonne, Paris, Le Havre, Amiens
             🇫🇷, before moving here 6 months ago. I'm pretty easy in almost everything, just "be
