--- a/pour-alberte/index.html
+++ b/pour-alberte/index.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pour Alberte 🎀</title>
+    <title>pour 𝒜lberte 🎀</title>
 
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="flickity.min.css">
 </head>
 
 <body>
 
     <div class="content">
 
-        <img src="images/effortcommun.png" alt="" class="effortCommun
-        ">
-        <h1>pour Alberte 🎀</h1>
-
         <div class="moon">
-            <p>You will be reading this on a <span id="moon"></span> moon...</p>
+            <p>⎰ you are reading this under a <span id="moon"></span> moon ⎱</p>
         </div>
+
+        <h1>pour 𝒜lberte 🎀</h1>
+
 
         <div class="letter">
             <h3>Letter</h3>
@@ -33,24 +33,24 @@
         </div>
 
         <div class="activities">
-            <h3>Activities</h3>
+            <h3><span>Activities</span> <i>to do</i></h3>
 
             <div>
                 <span class="pointer" style="background-color: white;
     color: black;" onclick="hideIt(this)">RIDING</span>
                 <span class="pointer" style="background-color: black;
-    color: white;" onclick="hideIt(this)">TALKIN</span>
+    color: white;" onclick="hideIt(this)">TALKING</span>
                 <span class="pointer" style="background-color: black;
     color: white;" onclick="hideIt(this)">SEEING</span>
                 <span class="pointer" style="background-color: white;
     color: black;" onclick="hideIt(this)">THINKING</span>
-                <div>LOVING 🤍🤍</div>
+                <div>LOVING 🖤🤍</div>
             </div>
 
         </div>
 
         <div class="musics">
-            <h3>Some songs for this letter</h3>
+            <h3>Songs</h3>
 
             <iframe width="100%" height="auto"
                     src="https://www.youtube-nocookie.com/embed/d1fkfEMoEq4?si=TYrLa5diR5AMK8um&amp;controls=0"
@@ -65,6 +65,13 @@
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             <iframe width="100%" height="auto"
+                    src="https://www.youtube-nocookie.com/embed/Px9a2LjW7-M?si=TmC5sGaVXr5iiOrp&amp;controls=0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            - rosalia- so good
+            <iframe width="100%" height="100%"
                     src="https://www.youtube-nocookie.com/embed/Px9a2LjW7-M?si=TmC5sGaVXr5iiOrp&amp;controls=0"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -123,14 +130,138 @@
 
         </div>
 
-        <div class="embruajada">
-            <h3>Embruajada</h3>
+        <div class="embrujada">
+            <h3><span>Lyrics</span> <i class="pointer">play</i></h3>
+            <p>
+                <span>El embrujo de tus ojos me adormece,
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>El hechizo de tus labios me enloquece,
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>Mi corazón late atormentado,
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>Porque el calor de tu aliento le ha faltado.
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>Para que seguir viviendo,
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>Si en el mundo voy sufriendo, [x2]
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>Este terrible dolor.
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+
+            <p>
+                <span>No me dejas alma mía,
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>No te vayas te lo ruego,
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>Ven a darle un consuelo,
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>Ven a darle un consuelo,
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span> A mi pobre corazón.
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>Aunque sé que con tu embrujo,
+
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>Me haces tanto, tanto mal,
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>Ven a estar siempre a mi lado, [x2]
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
+
+            <p>
+                <span>Que embrujado quiero estar.
+                </span>
+                <span>The charm of your eyes lulls me to sleep,</span>
+            </p>
         </div>
 
         <div class="photos">
-            <h3>Photos</h3>
+            <h3>Photos<i>12</i></h3>
+            <div
+                 class="main-carousel"
+                 data-flickity='{ "cellAlign": "center", "contain": true, "wrapAround": false, "imagesLoaded": true, "prevNextButtons": false, "pageDots": false}'>
+
+                <div
+                     class="carousel-cell">
+                    <img
+                         loading="lazy" src="images/IMG_2761.JPG"
+                         alt="Copa entre cubiertos y elementos de servicio, con flores en el fondo." />
+                </div>
+                <div
+                     class="carousel-cell">
+                    <img
+                         loading="lazy" src="images/IMG_2765.JPG"
+                         alt="Copa entre cubiertos y elementos de servicio, con flores en el fondo." />
+                </div>
+                <div
+                     class="carousel-cell">
+                    <img
+                         loading="lazy" src="images/IMG_2775.JPG"
+                         alt="Copa entre cubiertos y elementos de servicio, con flores en el fondo." />
+                </div>
+            </div>
         </div>
 
+
+        <img src="images/effortcommun.png" alt="" class="effortCommun
+        ">
+        <small>EFFORT COMMUN,<br>Sonja Ferlov Mancoba<br>1982</small>
 
 
     </div>
@@ -138,7 +269,7 @@
     <script>
 
         function hideIt(element) {
-            element.style.opacity = '0';
+            element.classList.toggle('op0')
         }
 
         function setMoon(source) {
@@ -225,6 +356,8 @@
 
 
     </script>
+
+    <script src="flickity.pkgd.min.js"></script>
 
 
 </body>
