--- a/sunday-sites/travels/index.html
+++ b/sunday-sites/travels/index.html
@@ -7,274 +7,242 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRAVELS</title>
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+
+    <style>
+        .index {
+            display: flex;
+            flex-wrap: wrap;
+
+            border: 1px solid black;
+            padding: 10px;
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column-reverse;
+        }
+
+        #Amiens {
+            background-color: orangered;
+        }
+
+        #Amsterdam {
+            background-color: #9c692b;
+        }
+
+        #Genève {
+            background-color: #4e954d;
+        }
+
+        #Socoa {
+            background-color: #ceac30;
+        }
+
+        #Bulgaria {
+            background-color: #e11c1c;
+        }
+
+        #Lübeck {
+            background-color: #724af4;
+        }
+
+        #Marseille {
+            background-color: #1f48cd;
+        }
+
+        #Cambrai {
+            background-color: #ef39bb;
+        }
+
+        #Rotterdam {
+            background-color: #f57927;
+        }
+
+        #Bilbao {
+            background-color: #cbcbcb;
+        }
+
+        #Barcelone {
+            background-color: #FFFFE3;
+        }
+
+        #Brussels {
+            background-color: burlywood;
+        }
+
+        #LeHavre {
+            background-color: gray;
+        }
+
+        #Paris {
+            background-color: skyblue;
+        }
+
+        #Pirineos {
+            background-color: rgb(88, 204, 88);
+        }
+
+        #SaintRobert {
+            background-color: rgb(248, 72, 72);
+        }
+
+        #Vercors {
+            background-color: green;
+        }
+
+        #Cévennes {
+            background-color: chocolate;
+        }
+
+        #Briançon {
+            background-color: aqua;
+        }
+
+        #Gaillon {
+            background-color: darkolivegreen;
+        }
+
+        #Nantes {
+            background-color: yellow;
+        }
+
+        #Strasbourg {
+            background-color: lime;
+        }
+
+        #Val-de-Saâne {
+            background-color: slateblue;
+        }
+
+        #Rouen {
+            background-color: lightseagreen;
+        }
+
+        #Bedousse {
+            background-color: rgb(111, 49, 210);
+        }
+
+        #Compiègne {
+            background-color: rgb(128, 81, 0);
+        }
+
+        #Copenhagen {
+            background-color: blue;
+        }
+
+        #Nancy {
+            background-color: yellow;
+        }
+
+        #Bruxelles {
+            background-color: brown;
+        }
+
+        #Barcelona {
+            background-color: rebeccapurple;
+        }
+
+        #Bolonia {
+            background-color: red;
+        }
+
+        #Geneve {
+            background-color: rosybrown;
+        }
+    </style>
 </head>
 
 <body>
 
-    <h2>My travels from last times</h2>
+    <h2>My travels from last months</h2>
 
-    <div class="content">
-        <!-- <a href="#top" id="arriba">⇧</a> -->
-
-        <div class="block">
-            <h4>Mai 22</h4>
-            <div class="cities">
-                <div class="city" id="Bilbao"><span>Bilbao</span></div>
-                <div class="city" id="Paris"><span>Paris</span></div>
-                <div class="city" id="LeHavre"><span>Le Havre</span></div>
-                <div class="city" id="Barcelone"><span>Barcelone</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>June 22</h4>
-            <div class="cities">
-                <div class="city" id="Barcelone"><span>Barcelone</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>July 22</h4>
-            <div class="cities">
-                <div class="city" id="Cévennes"><span>Cévennes</span></div>
-                <div class="city" id="Bilbao"><span>Bilbao</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>August 22</h4>
-            <div class="cities">
-                <div class="city" id="Pirineos"><span>Pirineos</span></div>
-                <div class="city" id="Bedousse"><span>Bedousse</span></div>
-                <div class="city" id="SaintRobert"><span>Saint-Robert</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>Septembre 22</h4>
-            <div class="cities">
-            </div>
-        </div>
-        <div class="block">
-            <h4>October 22</h4>
-            <div class="cities">
-                <div class="city" id="Paris"><span>Paris</span></div>
-            </div>
-        </div>
-        <div class="block">
-            <h4>November 22</h4>
-            <div class="cities">
-                <div class="city" id="Brussels"><span>Brussels</span></div>
-            </div>
-        </div>
-
-
-        <div class="block">
-            <h4>December 22</h4>
-            <div class="cities">
-                <div class="city" id="Paris"><span>Paris</span></div>
-                <div class="city" id="Brussels"><span>Brussels</span></div>
-                <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
-                <div class="city" id="Bilbao"><span>Bilbao</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>January 23</h4>
-            <div class="cities">
-                <div class="city" id="Marseille"><span>Marseille</span></div>
-                <div class="city" id="Cambrai"><span>Cambrai</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>February 23</h4>
-            <div class="cities">
-                <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>March 23</h4>
-            <div class="cities">
-                <div class="city" id="Bulgaria"><span>Bulgaria</span></div>
-                <div class="city" id="Paris"><span>Paris</span></div>
-                <div class="city" id="LeHavre"><span>Le Havre</span></div>
-                <div class="city" id="Cambrai"><span>Cambrai</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>April 23</h4>
-            <div class="cities">
-                <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
-                <div class="city" id="Paris"><span>Paris</span></div>
-                <div class="city" id="Bilbao"><span>Bilbao</span></div>
-            </div>
-        </div>
-
-
-        <div class="block">
-            <h4>May 23</h4>
-            <div class="cities">
-                <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
-                <div class="city" id="Lübeck"><span>Lübeck</span></div>
-                <div class="city" id="Cambrai"><span>Cambrai</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>June 23</h4>
-            <div class="cities">
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>July 23</h4>
-            <div class="cities">
-                <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
-                <div class="city" id="Amsterdam"><span>Amsterdam</span></div>
-                <div class="city" id="Brussels"><span>Brussels</span></div>
-                <div class="city" id="Marseille"><span>Marseille</span></div>
-                <div class="city" id="Cévennes"><span>Cévennes</span></div>
-                <div class="city" id="Socoa"><span>Socoa</span></div>
-                <div class="city" id="Bilbao"><span>Bilbao</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>August 23</h4>
-            <div class="cities">
-                <div class="city" id="Socoa"><span>Socoa</span></div>
-                <div class="city" id="Bilbao"><span>Bilbao</span></div>
-                <div class="city" id="Genève"><span>Genève</span></div>
-            </div>
-        </div>
-
-
-        <div class="block">
-            <h4>Septembre 23</h4>
-            <div class="cities">
-                <div class="city" id="Paris"><span>Paris</span></div>
-                <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>October 23</h4>
-            <div class="cities">
-                <div class="city" id="Briançon"><span>Briançon</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>November 23</h4>
-            <div class="cities">
-                <div class="city" id="Paris"><span>Paris</span></div>
-                <div class="city" id="Gaillon"><span>Gaillon</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>December 23</h4>
-            <div class="cities">
-                <div class="city" id="Bilbao"><span>Bilbao</span></div>
-                <div class="city" id="Amiens"><span>Amiens</span></div>
-                <div class="city" id="Paris"><span>Paris</span></div>
-                <div class="city" id="Bilbao"><span>Bilbao</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>January 24</h4>
-            <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>February 24</h4>
-            <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
-                <div class="city" id="Strasbourg"><span>Strasbourg</span></div>
-                <div class="city" id="Paris"><span>Paris</span></div>
-                <div class="city" id="Bilbao"><span>Bilbao</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>March 24</h4>
-            <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
-                <div class="city" id="Cambrai"><span>Cambrai</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>April 24</h4>
-            <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
-                <div class="city" id="Nantes"><span>Nantes</span></div>
-                <div class="city" id="Rouen"><span>Rouen</span></div>
-                <div class="city" id="Val-de-Saâne"><span>Val-de-Saâne</span></div>
-                <div class="city" id="Paris"><span>Paris</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>Mai 24</h4>
-            <div class="cities">
-                <div class="city" id="Amiens"><span>Amiens</span></div>
-                <div class="city" id="Compiègne"><span>Compiègne</span></div>
-            </div>
-        </div>
-
-        <div class="block">
-            <h4>Juin 24</h4>
-            <div class="cities">
-                <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
-                <div class="city" id="Amiens"><span>Amiens</span></div>
-                <div class="city" id="Gaillon"><span>Gaillon</span></div>
-                <div class="city" id="Paris"><span>Paris</span></div>
-            </div>
-        </div>
-
-
+    <div class="index">
     </div>
 
-    <!-- 
-    <div class="index">
-        <div class="city" id="Amiens"><span>Amiens</span></div>
-        <div class="city" id="Amsterdam"><span>Amsterdam</span></div>
-        <div class="city" id="Genève"><span>Genève</span></div>
-        <div class="city" id="Socoa"><span>Socoa</span></div>
-        <div class="city" id="Bulgaria"><span>Bulgaria</span></div>
-        <div class="city" id="Lübeck"><span>Lübeck</span></div>
-        <div class="city" id="Marseille"><span>Marseille</span></div>
-        <div class="city" id="Cambrai"><span>Cambrai</span></div>
-        <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
-        <div class="city" id="Bilbao"><span>Bilbao</span></div>
-        <div class="city" id="Barcelone"><span>Barcelone</span></div>
-        <div class="city" id="Brussels"><span>Brussels</span></div>
-        <div class="city" id="LeHavre"><span>Le Havre</span></div>
-        <div class="city" id="Paris"><span>Paris</span></div>
-        <div class="city" id="Pirineos"><span>Pirineos</span></div>
-        <div class="city" id="Cévennes"><span>Cévennes</span></div>
-        <div class="city" id="Briançon"><span>Briançon</span></div>
-        <div class="city" id="Gaillon"><span>Gaillon</span></div>
-        <div class="city" id="Nantes"><span>Nantes</span></div>
-    </div> -->
+
+    <div class="content">
+    </div>
 
     <div class="firm">
 
-        <img src="assets/image.png" alt="" style="width: 200px;border-radius: 8px;">
+        <img src="image.png" alt="" style="width: 200px;border-radius: 8px;">
         <div><a href="https://sundaysites.cafe/">SundaySite</a> made on a 22nd of October 2023 with my friend <a
                href="https://samdroual.fr">Sam</a> in <div class="city" id="Amiens"
                  style="width: fit-content; display: inline;"><span>Amiens</span></div>
         </div>
 
     </div>
+
+    <script>
+
+        async function loadDataFromJSON() {
+            try {
+                const response = await fetch('travels.json');
+                const data = await response.json();
+
+                const contentDiv = document.querySelector('.content');
+                const indexContainer = document.querySelector('.index')
+                const citySet = new Set();
+
+                // Extract all cities into a set to avoid duplicates
+                data.forEach(entry => {
+                    entry.cities.forEach(city => citySet.add(city));
+                });
+
+                // Sort the cities alphabetically
+                const sortedCities = Array.from(citySet).sort();
+
+                // Create a div for each city
+                sortedCities.forEach(city => {
+                    const cityEl = document.createElement('div');
+                    cityEl.className = 'city';
+                    cityEl.id = city;
+                    const span = document.createElement('span');
+                    span.textContent = city;
+
+                    cityEl.appendChild(span);
+                    indexContainer.appendChild(cityEl);
+                });
+
+
+
+                data.forEach(entry => {
+                    const block = document.createElement('div');
+                    block.className = 'block';
+
+                    const monthHeader = document.createElement('h4');
+                    monthHeader.textContent = entry.month;
+                    block.appendChild(monthHeader);
+
+                    const citiesContainer = document.createElement('div');
+                    citiesContainer.className = 'cities';
+
+                    entry.cities.forEach(city => {
+                        const cityDiv = document.createElement('div');
+                        cityDiv.className = 'city';
+                        cityDiv.id = city.replace(/\s+/g, ''); // Remove spaces for ID
+
+                        const span = document.createElement('span');
+                        span.textContent = city;
+
+                        cityDiv.appendChild(span);
+                        citiesContainer.appendChild(cityDiv);
+                    });
+
+                    block.appendChild(citiesContainer);
+                    contentDiv.appendChild(block);
+                });
+
+            } catch (error) {
+                console.error('Error loading JSON:', error);
+            }
+        }
+
+        // Call the function on page load
+        document.addEventListener('DOMContentLoaded', loadDataFromJSON);
+
+    </script>
 </body>
 
 </html>
