--- a/pour-alberte/index.html
+++ b/pour-alberte/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pour 𝒜lberte</title>
+    <meta name="title" content="pour 𝒜lberte">
+    <meta name="description"
+          content="I leave you here some things I started collecting during our days together. You can find some Letters, Activities, Songs, Journal, Lyrics, Photos, Proverbs, and maybe a bit more, I'm not sure! Enjoy :)">
+
+
     <link rel="stylesheet" href="assets/style.css">
 
     <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
@@ -17,7 +22,7 @@
 
 <body>
 
-    <div class="question">
+    <!-- <div class="question">
         <div class="first">
             <h3>Are you A.E.C 🎀 ?</h3>
             <div>
@@ -39,7 +44,7 @@
                 <button onclick="thirdQuestion()">Kys</button>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="content">
 
@@ -47,16 +52,19 @@
             <p>∼ you are reading this under a <span id="moon"></span> moon ∼</p>
         </div>
 
-        <h1>pour 𝒜lberte 🎀<br><small>(happy 25 bth)</small></h1>
+        <h1>pour 𝒜lberte 🎀
+        </h1>
 
         <div class="intro">
-            <p>Hello Alberte, for this day I left you I started to collect some <a href="#letter"><b>Letters</b></a>, <a
+            <p>Hello Alberte, for this day (25!) I leave you here some things I started collecting during our days
+                together. You
+                can find some <a href="#letter"><b>Letters</b></a>, <a
                    href="#activities"><b>Activities</b></a>, <a
                    href="#songs"><b>Songs</b></a>, <a
                    href="#journal"><b>Journal</b></a>,
                 <a href="#lyrics"><b>Lyrics</b></a>,
                 <a href="#photos"><b>Photos</b></a>,
-                <a href="#proverbs"><b>Proverbs</b></a>, and some .
+                <a href="#proverbs"><b>Proverbs</b></a>, and maybe a bit more, I'm not sure! Enjoy :)
             </p>
         </div>
 
@@ -66,19 +74,23 @@
                 <i>My dear A.</i>
                 <p> I'm finishing dinner here in Hamburg at Leon's restaurant, a very simple Italian place where some
                     tables are speaking business in German.</p>
-                <p>Is it this moment that all the emotions and memories of the weekend flows through my head. Looking
-                    at the candle on my table I think about the one we had close to us at your work, and how beautiful
-                    was to talk, see and being close to you at that moment. I really feel so wired 🔌 with you on our
-                    conversations, preocupations, gestures, emotions, wants. This union was so beautiful that now, alone
-                    and silent in this table It feels so dreamy. That first ice cream waiting for the sunset looked like
-                    the 30th. Our bikes rides coming back to your home remembered me these longs rides home on the
-                    summer. Our shiny mornings of eyes, hugs and kisses were so natural that they would be the norm
+                <p>Is at this moment that all the emotions and memories from the weekend flows through my head. Looking
+                    at the candle on my table I think about the one we had close to us at your work place, and how
+                    beautiful
+                    was to talk, see and being close to you at that moment. I really felt so wired (🤍🔌) with you, on
+                    our
+                    conversations, preocupations, gestures, emotions, wants. This time was so beautiful that now, alone
+                    and silent in this table it feels so dreamy. That first ice cream waiting for the sunset looked like
+                    the 30th we eat. Our bikes rides coming back to your home remembered me these longs rides home on
+                    summer time. Our shiny mornings of eyes, hugs and kisses were so natural that they would be the norm
                     before starting any day. As you said, these days and what we had talked make me think about places,
-                    friends, and love. I keep all of this in me, as you will do, and see how it shapes me over the time.
-                    On these days, I saw a lot of you: your generosity and motivation, your care, your patience (ahah)
-                    and even if it has been just three more days, I feel a true confidence growing. I will be where you
+                    friends, love. I keep all of this in me, as you will do, and see how it shapes me over the time.
+                    On these days in cph, I saw a lot of you: your generosity and motivation, your care, your patience
+                    (ahah)
+                    and even if it has been just three more days, I felt a true confidence growing between. I will be
+                    where you
                     know I am, and hope to continue growing this confidence, memories and relationship together. I will
-                    miss you a A.E.C, from <span
+                    miss you A.E.C, from <span
                           style="background-color: brown;">C</span><span
                           style="background-color: white;color: black;">P</span><span
                           style="background-color: brown;">H</span> and <span
@@ -122,7 +134,7 @@
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                 <iframe width="100%" height="auto"
-                        src="https://www.youtube-nocookie.com/embed/Px9a2LjW7-M?si=TmC5sGaVXr5iiOrp&amp;controls=0"
+                        src="https://www.youtube.com/embed/_6YCNd3ONUU?si=AhM6dfJMzhkVKNdM"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -165,8 +177,7 @@
 
 
                 <div>
-                    <div style="background-color: MediumSeaGreen;     border-top: 1px solid MediumSeaGreen;
-">
+                    <div style="background-color: MediumSeaGreen;     border-top: 1px solid MediumSeaGreen;">
                         <span>D</span>
                         <span>06</span>
                     </div>
@@ -187,7 +198,7 @@
 
         </div>
 
-        <div class="embrujada" id="lyrics">
+        <div id="lyrics" class="center">
             <h3><span>Lyrics</span> <i class="pointer" id="audioButton">play</i></h3>
             <p>
                 <span>El embrujo de tus ojos me adormece,
@@ -337,7 +348,7 @@
         </div>
 
         <div id="photos">
-            <h3>Photos<i>17</i></h3>
+            <h3>Photos<i>surprise!</i></h3>
 
             <div>
                 <div class="frame">
@@ -381,7 +392,7 @@
                     <p>letters-&-letters.jpg</p>
                 </div>
                 <div class="frame">
-                    <div><img src="media/mysterious-and-dark.jpeg" alt=""></div>
+                    <div><img src="media/mysterious-and-dark.webp" alt=""></div>
                     <p>mysterious-and-dark.jpeg</p>
                 </div>
                 <div class="frame">
@@ -419,18 +430,21 @@
             </div>
         </div>
 
-        <div id="proverbs">
+        <div id="proverbs" class="center">
             <h3>Proverbs<i>only the best</i></h3>
             <div>
-                <span> "NO BIKE - NO LIFE"</span>
-                <button>another one</button>
+                <span id="quote"> "NO BIKE - NO LIFE"</span>
             </div>
+            <button onclick="changeQuote()">another one</button>
+            <br><br>
+            <p>(send ideas to <i>pablomoreno@proton.me</i>)</p>
         </div>
 
 
         <div id="letter2">
             <h3>Letter nº2</h3>
             <div>
+
             </div>
 
             <div>
@@ -443,94 +457,6 @@
 
     </div>
 
-    <script>
-
-
-
-        function setMoon(source) {
-            document.getElementById('moon').innerHTML = source;
-        }
-        function getMoonPhase(year, month, day) {
-            var c = e = jd = b = 0;
-
-            if (month < 3) {
-                year--;
-                month += 12;
-            }
-            ++month;
-            c = 365.25 * year;
-            e = 30.6 * month;
-            jd = c + e + day - 694039.09; //jd is total days elapsed
-            jd /= 29.5305882; //divide by the moon cycle
-            b = parseInt(jd); //int(jd) -> b, take integer part of jd
-            jd -= b; //subtract integer part to leave fractional part of original jd
-            b = Math.round(jd * 8); //scale fraction from 0-8 and round
-            if (b >= 8) {
-                b = 0; //0 and 8 are the same so turn 8 into 0
-            }
-
-
-            // 0 => New Moon 37.5 [show circle, hide rect]
-            // 1 => Waxing Crescent Moon 50.5 [show circle, hide rect]
-            // 2 => Quarter Moon //translateX(50%), [display rect, hide circle]
-            // 3 => Waxing Gibbous Moon 70.5 [show circle, hide rect]
-            // 4 => Full Moon [hide circle and rect]
-            // 5 => Waning Gibbous Moon, -15.5 [show circle, hide rect]
-            // 6 => Last Quarter Moon //transform: translateX(-50%) [display rect, hide circle]
-            // 7 => Waning Crescent Moon 30.5 [show circle, hide rect]
-
-            return b;
-        }
-
-        let launchMoon = function () {
-
-            let d = new Date();
-            let i = 0;
-
-            let phase = getMoonPhase(d.getFullYear(), d.getMonth() + 1, d.getDate() + i)
-            i += 4
-
-            console.log(phase)
-
-            if (phase == 0) {
-                var source = "🌑"
-                setMoon(source)
-            }
-
-            if (phase == 1) {
-                var source = "🌒";
-                setMoon(source)
-            }
-            if (phase == 2) {
-                var source = "🌓";
-                setMoon(source)
-            }
-            if (phase == 3) {
-                var source = "🌔";
-                setMoon(source)
-            }
-            if (phase == 4) {
-                var source = "🌕";
-                setMoon(source)
-            }
-            if (phase == 5) {
-                var source = "🌖";
-                setMoon(source)
-            }
-            if (phase == 6) {
-                var source = "🌗";
-                setMoon(source)
-            }
-            if (phase == 7) {
-                var source = "🌘";
-                setMoon(source)
-            }
-        };
-
-        launchMoon();
-
-
-    </script>
 
     <script src="assets/index.js"></script>
 
