--- a/pour-alberte/index.html
+++ b/pour-alberte/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <!-- <div class="question">
+    <div class="question">
         <div class="first">
             <h3>Are you A.E.C 🎀 ?</h3>
             <div>
@@ -33,18 +33,18 @@
         <div class="second">
             <h3>Is today your birthday?</h3>
             <div>
-                <button onclick="secondQuestion()">Oui</button>
-                <button onclick="badAwnser()">Non</button>
+                <button onclick="badAwnser()">Oui</button>
+                <button onclick="secondQuestion()">Non</button>
             </div>
         </div>
         <div class="third">
-            <h3>What is more popular in 🇩🇰 ?</h3>
+            <h3>What's more popular in 🇩🇰 ?</h3>
             <div>
                 <button onclick="badAwnser()">Bik</button>
                 <button onclick="thirdQuestion()">Kys</button>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <div class="content">
 
