--- a/pour-alberte/index.html
+++ b/pour-alberte/index.html
@@ -97,7 +97,8 @@
                           style="background-color: red;">A</span><span
                           style="background-color: white;color: black;">M</span><span
                           style="background-color: blue;">S</span> to the infinite.
-                </p>
+                </p><BR><BR>
+                <p>P.</p>
             </div>
         </div>
 
@@ -204,6 +205,7 @@
                 <span>El embrujo de tus ojos me adormece,
                 </span>
                 <span>The charm of your eyes lulls me to sleep,</span>
+                <span>Le charme de tes yeux m'endort,</span>
             </p>
 
             <p>
@@ -417,7 +419,7 @@
                 </div>
                 <div class="frame">
                     <div><img src="media/nice-shoes.webp" alt=""></div>
-                    <p>nice-shoes.jpg</p>
+                    <p>sun & beers in copenhagen.jpg</p>
                 </div>
                 <div class="frame">
                     <div><img src="media/tv-4-all.webp" alt=""></div>
@@ -425,7 +427,7 @@
                 </div>
                 <div class="frame">
                     <div><img src="media/with-all-the-energy-inside.webp" alt=""></div>
-                    <p>with-all-the-energy-inside.jpg</p>
+                    <p>with-all-the-energy-smoking.jpg</p>
                 </div>
             </div>
         </div>
@@ -445,15 +447,35 @@
             <h3>Letter nº2</h3>
             <div>
 
-            </div>
 
-            <div>
-                <img src="media/effort-commun-sonja-ferlov.webp" alt="" class="effortCommun">
-                <small>EFFORT COMMUN,<br>Sonja Ferlov Mancoba<br>1982</small>
+                <p>Hi again A.</p>
+                <p>After our call, yesterday, I wanted to write you a bit more. I liked to ear your phone voice again,
+                    also
+                    because it was different from the phone calls before cph. Different because we grown a bit together
+                    during these days and earn some beautiful confidence.</p>
+                <p>I think that the beautifulest thing I bring home from these days (after u beautiful Alberte), is that
+                    closeness with you, and how it feels nice and tangible, even outside a love story. I keep this in
+                    mind,
+                    now, after seeing, collecting, thinking this small gift that I hope you like it, as much as we
+                    enjoyed
+                    making these moments. As said at the phone, we know where we are, let's see next time but until
+                    then,
+                    lot of kys.</p>
+                <p>
+                    </3< /p>
+                <div class="effortCommun">
+                    <img src="media/effort-commun-sonja-ferlov.webp" alt="">
+                    <small>EFFORT COMMUN,<br>Sonja Ferlov Mancoba<br>1982</small>
+                </div>
+                <p>PS:<br>
+                    In my last ride I saw this sculpture on the other side of your school. I liked it because is a kind
+                    of recap of our weekend: heads, arms,
+                    kisses - and a lot of styrke together.</p>
+
             </div>
         </div>
 
-        <img src="media/cph-4-ever.png" alt="" style="width: 250px; transform: rotate(-2deg); margin: auto;">
+        <img src="media/cph-4-ever.png" alt="" style="width: 180px; transform: rotate(-2deg); margin: auto;">
 
     </div>
 
