--- a/pour-alberte/index.html
+++ b/pour-alberte/index.html
@@ -84,7 +84,7 @@
                     the 30th we eat. Our bikes rides coming back to your home remembered me these longs rides home on
                     summer time. Our shiny mornings of eyes, hugs and kisses were so natural that they would be the norm
                     before starting any day. As you said, these days and what we had talked make me think about places,
-                    friends, love. I keep all of this in me, as you will do, and see how it shapes me over the time.
+                    friends, love. I keep all of this in me, as you will do, and see how it shapes us over the time.
                     On these days in cph, I saw a lot of you: your generosity and motivation, your care, your patience
                     (ahah)
                     and even if it has been just three more days, I felt a true confidence growing between. I will be
@@ -453,7 +453,7 @@
                     also
                     because it was different from the phone calls before cph. Different because we grown a bit together
                     during these days and earn some beautiful confidence.</p>
-                <p>I think that the beautifulest thing I bring home from these days (after u beautiful Alberte), is that
+                <p>I think that the beautifulest thing I bring home from these days (after u beautiful Alberte), is the
                     closeness with you, and how it feels nice and tangible, even outside a love story. I keep this in
                     mind,
                     now, after seeing, collecting, thinking this small gift that I hope you like it, as much as we
